Delta sets panel: no-wrap on header row, fixes bad display when many axes

--- a/src/samsa-gui.css
+++ b/src/samsa-gui.css
@@ -280,6 +280,10 @@ button.close {
 	padding: 0 .5rem
 }
 
+#panel-tvts .tvt-item:nth-of-type(1) {
+	white-space: nowrap;
+}
+
 #panel-media .media-grid {
 	display: grid;
 	grid-template-columns: auto auto;
